<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <Button
        android:id="@+id/BackToMainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main_button"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center|bottom"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/changeMonthlyBudgetTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/change_monthly_budget_TextView"
            android:textSize="@dimen/change_budget_screen_headline" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/changeMonthlyBudgetEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/change_monthly_budget_hint_EditText"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <Button
                android:id="@+id/submitMonthlyChangeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_monthly_change_button"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_weight="2" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/resetBudgetNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/reset_budget_now"
            android:textSize="@dimen/change_budget_screen_headline" />

        <Button
            android:id="@+id/resetBudgetNowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_button"
            android:gravity="center"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/turnAutoResetOnOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center|left"
            android:text="@string/turn_auto_reset_OnOff"
            android:textSize="@dimen/change_budget_screen_headline" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/toggle_on"
            android:textOff="@string/toggle_off"
            android:checked="true"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>
