<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <Button
        android:id="@+id/changeMonthlyBudgetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_budget"
        />

    <TextView
        android:id="@+id/show_total_amount_left"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:textSize="64sp"
        android:gravity="center|bottom"
        android:text="@string/sample_amount_left"/>




    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">


        <EditText
            android:id="@+id/enterAmountSpent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/enter_amount_spent"
            android:layout_gravity="center"
            android:gravity="center"/>

        <Button
            android:id="@+id/submitAmountSpentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/submit_amount_spent_button"
            android:layout_gravity="center"
            android:gravity="center"/>



    </LinearLayout>




</LinearLayout>
