<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/enterMonthlyBudgetTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:textSize="@dimen/enter_monthly_budget"
        android:text="@string/enter_monthly_budget" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/enterMonthlyBudgetEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/example_budget"
            android:inputType="numberDecimal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/submitMonthlyBudgetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/submit_monthly_budget"/>

    </LinearLayout>

</LinearLayout>